fix logo alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@ h1 { /*logo*/
   color: gray;
   letter-spacing: 4px;
   /*position: absolute;*/
-  margin-left: 20px;
+  margin-left: 60px;
   font-size: 18pt;
   margin-bottom: 15px;
 }
